# cmake-python-cpp

./: CMakeLists.txt  LICENSE  README.md
bar/: CMakeLists.txt  bar.cpp
foo/: CMakeLists.txt  foo.cpp
python_module/: CMakeLists.txt  foobar_python.cpp  setup.py.in
